fix missing overflow on follows modal

--- a/app/assets/stylesheets/components/follows.scss
+++ b/app/assets/stylesheets/components/follows.scss
@@ -36,6 +36,7 @@
   overflow: auto;
   padding: .3em;
   box-sizing: border-box;
+  overflow: auto;
 }
 
 .follow-user-item {
